[metadata]
name = RandomLayers
version = 1.0
author = Bruno Zuada Coelho
author_email = bruno.zuadacoelho@deltares.nl
description = Generation of multilayered random layers with random fields properties
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License ::BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = RandomLayers
include_package_data = True
install_requires =
    gstools>=1.4.1
    numpy>=1.23.5
    scipy>=1.9.3
    matplotlib>=3.6.2
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
